# exam-timetable

./: .env  .gitignore  .tombi.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  db.sqlite3  deny.toml  diesel.toml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  skills-lock.json  tsconfig.json  tsconfig.options.json
.cargo/: audit.toml  config.toml
.config/: hakari.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  deploy-pages.yml
.moon/: toolchains.yml  workspace.yml
.moon/tasks/: node.yml  rust.yml
crates/app/: Cargo.toml  build.rs  moon.yml  tauri.conf.json
crates/app/src/: api.rs  data.json  renderer.rs  timetable_template.typ
crates/backend/: Cargo.toml  moon.yml
crates/backend/src/: lib.rs  scheduler_builder.rs  solver_adapter.rs
crates/entity/: Cargo.toml  moon.yml
crates/entity/src/: different_week_exams.rs  enrolled_students.rs  exam_allowed_timeslots.rs  exam_constraints.rs  exam_denied_timeslots.rs  exam_order_constraints.rs  exam_time_constraints.rs  exam_timeslot_restrictions.rs  exams.rs  id.rs  lib.rs  same_day_exams.rs  same_time_exams.rs  schema.rs  sessions.rs  students.rs  subject_grade.rs  subjects.rs  timeslots.rs  timetable_slots.rs  timetables.rs
crates/entity/src/entity/: different_week_exams.rs  enrolled_students.rs  exam_allowed_timeslots.rs  exam_denied_timeslots.rs  exams.rs  mod.rs  prelude.rs  same_day_exams.rs  sessions.rs  student_allowed_timeslots.rs  student_denied_timeslots.rs  students.rs  subject_allowed_timeslots.rs  subject_denied_timeslots.rs  subjects.rs  timeslots.rs
crates/exam-timetable-backend/: Cargo.toml
crates/exam-timetable-backend/src/: lib.rs
crates/exam-timetable-hack/: Cargo.toml
crates/exam-timetable-model/: Cargo.toml
crates/exam-timetable-model/src/: lib.rs
crates/exam-timetable-solver/: Cargo.toml
crates/exam-timetable-solver/src/: constraint_tracking.rs  diagnostics.rs  lib.rs
crates/hack/: Cargo.toml  moon.yml
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/solver/: Cargo.toml  moon.yml
crates/solver/src/: constraint_tracking.rs  diagnostics.rs  int_extensions.rs  lib.rs
docs/: coverage.md
frontend/: .prettierignore  drizzle.config.js  drizzle.config.ts  eslint.config.js  moon.yml  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.js
frontend/app/: Cargo.toml  tauri.conf.json
frontend/app/src/: api.rs  data.json  lib.rs  main.rs
frontend/src/: app.css  app.html
frontend/src/lib/: EnhancedDatePicker.svelte  EnhancedSelect.svelte  EnhancedTextInput.svelte  TimeslotPicker.svelte  backend.ts  dateKeys.ts  examDisplay.ts
frontend/src/lib/db/: customTypes.ts  index.ts  relations.ts  schema.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/(timeslots)/: +page.svelte
frontend/src/routes/constraints/: +page.svelte  DifferentWeekConstraintsCard.svelte  OrderConstraints.svelte  SameDayConstraintsCard.svelte  SameTimeConstraintsCard.svelte  TimeConstraints.svelte  styles.css
frontend/src/routes/students/: +page.svelte  AddStudentDialog.svelte  AddStudentSubjectDialog.svelte  EditStudentDialog.svelte  StudentActionsCell.svelte  StudentsCsvImportDialog.svelte  SubjectChipsCell.svelte  forms.ts  types.ts
frontend/src/routes/subjects/: +page.svelte  AddExamDialog.svelte  AddGradeDialog.svelte  AddSubjectDialog.svelte  EditExamDialog.svelte  EditSubjectDialog.svelte  SubjectsSection.svelte  forms.ts
frontend/src/routes/timetable/: +page.svelte  ExamTimetableSheet.svelte  ExportTimetableDialog.svelte  types.ts
migrations/: 20260224153528_initial_schema.sql  20260311090036_add_allowed_and_denied_dates.sql  20260311114246_same_day_exams.sql  20260311171748_different_week_exams.sql  20260312185420_add_multi_day_exams.sql
migrations/2026-03-22-171434-0000_init_db/: down.sql  up.sql
migrations/2026-04-01-111946-0000_unify_exam_timeslot_restrictions/: down.sql  up.sql
migrations/2026-04-03-192537-0000_session_auto_maintenance/: down.sql  up.sql
migrations/2026-04-03-195958-0000_same_time_exams/: down.sql  up.sql
migrations/2026-04-03-201706-0000_add_timeslot_start_time/: down.sql  up.sql
migrations/2026-04-07-145300-0000_add_session_time_config/: down.sql  up.sql
migrations/2026-04-07-201834-0000_add_timetables/: down.sql  up.sql
migrations/2026-04-13-091925-0000_consolidate_exam_constraint_types/: down.sql  up.sql
migrations/2026-04-13-093912-0000_remove_timeslot_start_time/: up.sql
migrations/2026-04-13-125731-0000_add_order_constraint_type/: down.sql  up.sql
migrations/2026-04-13-152233-0000_adjust_exam_constraint_restrictions/: down.sql  up.sql
migrations/2026-04-16-130055-0000_add_exam_name/: down.sql  up.sql
