[package]
name = "backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.cargo-machete]
ignored = ["hack"]

[dependencies]
diesel.workspace = true
entity = { path = "../entity", version = "0.1.0" }
hack = { path = "../hack", version = "0.1" }
itertools = "0.14.0"
serde.workspace = true
solver = { path = "../solver", version = "0.1.0" }
specta.workspace = true
thiserror = "2.0.18"
time.workspace = true

[features]
default = []
gh-release = ["solver/gh-release"]
vcpkg = ["solver/vcpkg"]
vendored = ["solver/vendored"]
