[package]
name = "entity"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
diesel = { version = "2.3.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "time"] }
time = { version = "0.3.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["from", "into", "display"] }
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
diesel-derive-newtype = { git = "https://github.com/quodlibetor/diesel-derive-newtype.git" }

[package.metadata.cargo-machete]
ignored = ["hack"]
