[package]
name = "entity"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.cargo-machete]
ignored = ["hack"]

[dependencies]
derive_more = { version = "2.1.1", features = ["display", "from", "into"] }
diesel = { version = "2.3.7", features = [
  "returning_clauses_for_sqlite_3_35",
  "sqlite",
  "time",
] }
diesel-derive-newtype = { git = "https://github.com/quodlibetor/diesel-derive-newtype.git" }
hack = { path = "../hack", version = "0.1" }
serde = { version = "1.0.228", features = ["derive"] }
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
time = { version = "0.3.44", features = ["serde"] }
