[package]
name = "entity"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.cargo-machete]
ignored = ["hack"]

[dependencies]
derive_more = { version = "2.1.1", features = ["display", "from", "into"] }
diesel.workspace = true
diesel-derive-newtype = { git = "https://github.com/quodlibetor/diesel-derive-newtype.git" }
hack = { path = "../hack", version = "0.1" }
serde.workspace = true
specta.workspace = true
time.workspace = true
