[package]
name = "exam-timetable-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
exam-timetable-model = { version = "0.1.0", path = "../exam-timetable-model" }
exam-timetable-solver = { version = "0.1.0", path = "../exam-timetable-solver" }
exam-timetable-hack = { version = "0.1.0", path = "../exam-timetable-hack" }
sqlx.workspace = true
futures = "0.3.32"
thiserror = "2.0.18"
time = "0.3.47"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
