[package]
name = "solver"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[package.metadata.cargo-machete]
ignored = ["hack"]

[dependencies]
derive_more = { version = "2.1.1", features = ["display", "from", "into"] }
entity = { path = "../entity" }
hack = { path = "../hack", version = "0.1" }
serde.workspace = true
specta.workspace = true
thiserror = "2.0.18"
z3 = { version = "0.20.0", default-features = false }

[features]
default = []
gh-release = ["z3/gh-release"]
vcpkg = ["z3/vcpkg"]
vendored = ["z3/vendored"]
