[package]
name = "app"
version = "0.1.0"
description = "Exam-scheduler app"
authors = ["Suya Singh <suya@wobbl.in>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hack = { version = "0.1", path = "../../crates/hack" }
backend = { version = "0.1", path = "../../crates/backend" }
entity = { version = "0.1", path = "../../crates/entity" }
diesel = { version = "2.3.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "time"] }
time = { version = "0.3.47", features = ["serde"] }
derive_more = { version = "2.1.1", features = ["from", "into", "display"] }
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "serde", "time"] }
tauri-plugin-fs = "2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
diesel_migrations = { version = "2.3.1", features = ["sqlite"] }
taurpc = "0.7.1"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
